--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>TWSG Air Con Booking Request</title>
+	<title>TWSG Air Con Request</title>
 	<style>
 		body {
 			font-family: sans-serif;
@@ -25,7 +25,7 @@
 	</style>
 </head>
 <body>
-	<h1>TWSG Air Con Booking Request</h1>
+	<h1>TWSG Air Con Request</h1>
 
 	<form id="form">
 		<p>
