Autofocus first form field

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 		<p>
 			<label>
 				Event Name
-				<input required id="event-name">
+				<input required autofocus id="event-name">
 			</label>
 		</p>
 
