--- a/index.html
+++ b/index.html
@@ -45,14 +45,14 @@
 		<p>
 			<label>
 				Start time
-				<input required type="time" id="start-time">
+				<input required type="time" id="start-time" value="19:00">
 			</label>
 		</p>
 
 		<p>
 			<label>
 				End time
-				<input required type="time" id="end-time">
+				<input required type="time" id="end-time" value="21:00">
 			</label>
 		</p>
 
@@ -66,7 +66,7 @@
 		<p>
 			<label>
 				Requester Contact Number
-				<input required type="tel" id="requester-contact">
+				<input required type="tel" id="requester-contact" value="65136970">
 			</label>
 		</p>
 
